# scry

./: .gitignore  AGENT-ECONOMY.md  ARENA.md  BARROW.md  CLAUDE.md  CONSTELLATION.md  CONTENT-PLAN.md  FAMILIAR.md  FIELD-RESULTS-2026-06-18.md  FIELD-TEST.md  HARNESSES.md  MARKET.md  MONITOR-YOUR-AGENT.md  PLAYGROUND.md  README.md  SCRY-ECONOMY.md  SITE-REDESIGN.md  SUITE.md  VENUE-MMO.md  VOWS.md  WIKI-SEAM.md  WITNESS.md  adapters.py  adapters_openclaw.py  af_judge_audit.py  black_box_meter.py  calibration.py  conversation_walk.py  covenant_social.py  destiny_arena.py  destiny_profile.py  detector_audit.py  envelope.py  envelope_demo.py  fork_probe.py  full_loop_live.py  gate.py  gate_demo.py  gate_legibility_falsifier.py  grounding_test.py  (+22 more)
.claude-plugin/: marketplace.json  plugin.json
clients/python/: README.md  pyproject.toml
clients/python/scry_client/: __init__.py  client.py  heartbeat.py  init_cli.py  play.py
contracts/: .gitignore  foundry.toml
drift-immune/: README.md  agent_sandbox.py  inoculation.py  rag_redteam.py  raw_immunity.py  semantic_immunity.py  sleeper_effect.py  vector_immunity.py
envs/: README.md  scry_barrow_env.py  test_barrow_env.py  train_pufferlib.py
experimental/: README.md
familiar/: __init__.py  auctions.py  autonomy.py  brain.py  core.py  court.py  crew.py  host.py  jobs.py  ledger.py  live_smoke_mmo.py  market.py  mmo.py  payment.py  reputation.py  specs.py  surface.py  test_familiar.py  tools.py  workspace.py
meter/: .gitignore  README.md  aeneas_worker.py  agora.py  anchor_worker.py  arena.py  augury.py  barrow.py  (+31 more)
(+97 files in other folders)
